--- a/퍼블리셔/day03/miniproject/ably.html
+++ b/퍼블리셔/day03/miniproject/ably.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ably 에이블리</title>
     <link rel="stylesheet" href="ably.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="max-container">
@@ -14,7 +18,7 @@
                     <img src="ably-logo.JPG" alt="logo">
                 </div>
                 <div class="half-box centeralize">
-                    <button class="button main">에이블리</button>
+                    <button class="button">에이블리</button>
                     <button class="button">팀문화</button>
                     <button class="button">소식</button>
                     <button class="button">채용공고</button>
