--- a/퍼블리셔/day03/miniproject/ably.html
+++ b/퍼블리셔/day03/miniproject/ably.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ably 에이블리</title>
-    <link rel="stylesheet" href="ably.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="ably.css" />
+    <link rel="stylesheet" href="../../common/reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="max-container">
-        <nav class="navi-box">
-            <div class="navi">
-                <div class="half-box">
-                    <img src="ably-logo.JPG" alt="logo">
-                </div>
-                <div class="half-box centeralize">
-                    <button class="button">에이블리</button>
-                    <button class="button">팀문화</button>
-                    <button class="button">소식</button>
-                    <button class="button">채용공고</button>
-                    <button class="button">FAQ</button>
-                </div>
-            </div>
-        </nav>
-        <div class="hero-box centeralize">
-            <h2 class="title">당신의 넥스트커머스는<br>
-                무엇인가요?
-            </h2>
+      <nav class="navi-box">
+        <div class="navi">
+          <div class="half-box">
+            <!-- <img src="ably-logo.JPG" alt="logo" /> -->
+            <img src="https://ably.team/images/Logo.svg" alt="logo" />
+          </div>
+          <div class="half-box centeralize">
+            <button class="button">에이블리</button>
+            <button class="button">팀문화</button>
+            <button class="button">소식</button>
+            <button class="button">채용공고</button>
+            <button class="button">FAQ</button>
+          </div>
         </div>
+      </nav>
+      <div class="hero-box centeralize">
+        <h2 class="title">
+          당신의 넥스트커머스는<br />
+          무엇인가요?
+        </h2>
+      </div>
     </div>
-</body>
+  </body>
 </html>
