--- a/퍼블리셔/day05/firfin.html
+++ b/퍼블리셔/day05/firfin.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../common/reset.css" />
+    <link rel="stylesheet" href="firfinfont.css">
     <link rel="stylesheet" href="firfin.css" />
   </head>
   <body>
@@ -37,11 +38,11 @@
     <main>
       <section class="first">
         <div class="half-box">
-          <h2 class="maintitle">
+          <h2 class="main-title">
             용돈은<br />
             퍼핀으로 주세요
           </h2>
-          <h3 class="subtitle">엄마가 만들어주는 초등용돈카드</h3>
+          <h3 class="sub-title">엄마가 만들어주는 초등용돈카드</h3>
           <div class="download-buttons-box">
             <button class="download-button">
               <i class="fa-brands fa-apple"></i> App Store
