--- a/퍼블리셔/day08/miniproject/index.html
+++ b/퍼블리셔/day08/miniproject/index.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../../common/reset.css" />
-    <link rel="stylesheet" href="../../common/font.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="font.css" />
     <link rel="stylesheet" href="dagym.css" />
     <script defer src="test.js"></script>
   </head>
@@ -45,13 +45,5 @@
         </div>
       </div>
     </main>
-    <!-- <footer>
-      <div class="iconBox">
-        <button class="iconBtn"><span></span>홈</button>
-        <button class="iconBtn"><span></span>운동시설</button>
-        <button class="iconBtn"><span></span>트레이너</button>
-        <button class="iconBtn"><span></span>마이다짐</button>
-      </div>
-    </footer> -->
   </body>
 </html>
